--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 :root {
-    --color1: #b662c5;
-    --color2: rgb(213, 130, 185);
+    --color1: #7220a9;
+    --color2: rgb(215, 126, 205);
 }
 
 html,
 body {
     padding: 0;
     margin: 0;
+    background-color: rgb(242, 234, 243);
 }
 
 body {
@@ -61,13 +62,80 @@ body {
 .filter_div {
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .filter_div a {
     text-decoration: none;
     padding: 9px;
     color: var(--color1);
-    border: 1px solid rgb(202, 190, 209);
+    border: 1px solid rgb(190, 163, 206);
     border-radius: 4px;
     margin: 4px;
+}
+
+.animals {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.animal-card {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    background-color: white;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.animal-card-photo {
+    grid-row: 1;
+    overflow: hidden;
+}
+
+.animal-card-photo img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform .3s ease-in-out;
+}
+
+.animal-card:hover img {
+    transform: rotate(30deg) scale(1.4);
+
+}
+
+.animal-card-text {
+    padding: 20px 20px;
+}
+
+.animal-card-text h3 {
+    margin: 0;
+    padding: 0;
+    font-weight: normal;
+    font-size: 1.8rem;
+}
+
+.animal-card-text small {
+    color: rgb(183, 180, 180);
+}
+
+.animal-card-text p {
+    margin: .8rem 0;
+    padding: 0;
+    line-height: 1.5;
+}
+
+.primary-btn {
+    background: linear-gradient(var(--color2), var(--color1));
+    padding: 10px;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.primary-btn:hover {
+    background: linear-gradient(var(--color2), var(--color2));
+
 }
